{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 86,
  "lineage": "bd5507d6-5c4a-426d-4311-1cff006e68be",
  "resources": [
    {
      "module": "module.Backend_EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "General_EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:258049740213:instance/i-0a6f6d9aa98fce347",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6f6d9aa98fce347",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Bastion-my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051a6fbed2490f634"
              }
            ],
            "primary_network_interface_id": "eni-051a6fbed2490f634",
            "private_dns": "ip-10-0-6-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.166",
            "public_dns": "ec2-54-90-155-86.compute-1.amazonaws.com",
            "public_ip": "54.90.155.86",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-086a4ae889f6d5a32",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0946481944022c484",
            "tags": {
              "Environment": "development",
              "Name": "backend-my-ec2-instance-instance",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "backend-my-ec2-instance-instance",
              "Owner": "Macarious"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0217afa429318f075"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.KEY_Bastion.aws_key_pair.General_Key_Pair",
            "module.KEY_Bastion.tls_private_key.my_key",
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_subnet.public_subnets",
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "General_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group/sg-0217afa429318f075",
            "description": "This security group is for my rds instance",
            "egress": [],
            "id": "sg-0217afa429318f075",
            "ingress": [],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "258049740213",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "my-sg-sg",
              "Owner": "Macarious",
              "VPC_Related": "arn:aws:ec2:us-east-1:258049740213:vpc/vpc-0f66a5b2afdca5d4f"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "my-sg-sg",
              "Owner": "Macarious",
              "VPC_Related": "arn:aws:ec2:us-east-1:258049740213:vpc/vpc-0f66a5b2afdca5d4f"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258049740213",
            "id": "sg-0217afa429318f075",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-0ce90403322fcb555",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0ce90403322fcb555",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-0ce90403322fcb555",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-0d617016046c7c3c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP",
            "from_port": 80,
            "id": "sgr-0d617016046c7c3c4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-0d617016046c7c3c4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-0fe225c102747be09",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgr-0fe225c102747be09",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-0fe225c102747be09",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": "mysql",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-013f8702df0bc884d",
            "cidr_ipv4": "10.0.3.0/24",
            "cidr_ipv6": null,
            "description": "Allow MySQL from private subnets 10.0.3.0/24 only",
            "from_port": 3306,
            "id": "sgr-013f8702df0bc884d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-013f8702df0bc884d",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": "mysql_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-02bde61f4803a5b3b",
            "cidr_ipv4": "10.0.4.0/24",
            "cidr_ipv6": null,
            "description": "Allow MySQL from private subnets 10.0.4.0/24 only",
            "from_port": 3306,
            "id": "sgr-02bde61f4803a5b3b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-02bde61f4803a5b3b",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": "postgres",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-0804a05b34663ce3a",
            "cidr_ipv4": "10.0.3.0/24",
            "cidr_ipv6": null,
            "description": "Allow PostgreSQL from private subnets 10.0.3.0/24 only",
            "from_port": 5432,
            "id": "sgr-0804a05b34663ce3a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-0804a05b34663ce3a",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": "postgres_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-0ee2ad5f23af7fef7",
            "cidr_ipv4": "10.0.4.0/24",
            "cidr_ipv6": null,
            "description": "Allow PostgreSQL from private subnets 10.0.4.0/24 only",
            "from_port": 5432,
            "id": "sgr-0ee2ad5f23af7fef7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-0ee2ad5f23af7fef7",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:security-group-rule/sgr-05f3734806aa225b9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH",
            "from_port": 22,
            "id": "sgr-05f3734806aa225b9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0217afa429318f075",
            "security_group_rule_id": "sgr-05f3734806aa225b9",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.SG.aws_security_group.General_SG",
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:internet-gateway/igw-0b1ab57d533a854c0",
            "id": "igw-0b1ab57d533a854c0",
            "owner_id": "258049740213",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-igw",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-igw",
              "Owner": "Macarious"
            },
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:route-table/rtb-0d82d6a77bf2c169c",
            "id": "rtb-0d82d6a77bf2c169c",
            "owner_id": "258049740213",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-private-rt-1-us-east-1a",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-private-rt-1-us-east-1a",
              "Owner": "Macarious"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_eip.elastic_ip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.NAT_GW",
            "module.VPC.aws_subnet.public_subnets",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:route-table/rtb-0e0d66ea359e6513d",
            "id": "rtb-0e0d66ea359e6513d",
            "owner_id": "258049740213",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-private-rt-2-us-east-1b",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-private-rt-2-us-east-1b",
              "Owner": "Macarious"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_eip.elastic_ip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.NAT_GW",
            "module.VPC.aws_subnet.public_subnets",
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:route-table/rtb-0fd2959cf467416df",
            "id": "rtb-0fd2959cf467416df",
            "owner_id": "258049740213",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1ab57d533a854c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-public-rt",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-public-rt",
              "Owner": "Macarious"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db4138c043955ec3",
            "region": "us-east-1",
            "route_table_id": "rtb-0d82d6a77bf2c169c",
            "subnet_id": "subnet-083a1a2049e9a7018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_eip.elastic_ip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.NAT_GW",
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_subnet.private_subnets",
            "module.VPC.aws_subnet.public_subnets",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e040c9b56dc39ba",
            "region": "us-east-1",
            "route_table_id": "rtb-0e0d66ea359e6513d",
            "subnet_id": "subnet-0ad6a53b55c636ff6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_eip.elastic_ip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.NAT_GW",
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_subnet.private_subnets",
            "module.VPC.aws_subnet.public_subnets",
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030b16e5e8637b273",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd2959cf467416df",
            "subnet_id": "subnet-01c7eaf02721ac328"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_route_table.public_rt",
            "module.VPC.aws_subnet.public_subnets",
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c05bb4c40e08ae0a",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd2959cf467416df",
            "subnet_id": "subnet-0946481944022c484"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_route_table.public_rt",
            "module.VPC.aws_subnet.public_subnets",
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:subnet/subnet-083a1a2049e9a7018",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083a1a2049e9a7018",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258049740213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-private-subnet-1",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-private-subnet-1",
              "Owner": "Macarious"
            },
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258049740213",
            "id": "subnet-083a1a2049e9a7018",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:subnet/subnet-0ad6a53b55c636ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad6a53b55c636ff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258049740213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-private-subnet-2",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-private-subnet-2",
              "Owner": "Macarious"
            },
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258049740213",
            "id": "subnet-0ad6a53b55c636ff6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:subnet/subnet-01c7eaf02721ac328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c7eaf02721ac328",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258049740213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-public-subnet-1",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-public-subnet-1",
              "Owner": "Macarious"
            },
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258049740213",
            "id": "subnet-01c7eaf02721ac328",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.General_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:subnet/subnet-0946481944022c484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0946481944022c484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258049740213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2-public-subnet-2",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2-public-subnet-2",
              "Owner": "Macarious"
            },
            "vpc_id": "vpc-0f66a5b2afdca5d4f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258049740213",
            "id": "subnet-0946481944022c484",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.General_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "General_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258049740213:vpc/vpc-0f66a5b2afdca5d4f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0afd0762cdd2099af",
            "default_route_table_id": "rtb-03f81a8e4317aa956",
            "default_security_group_id": "sg-062096694883676e0",
            "dhcp_options_id": "dopt-051703acc10e3c647",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f66a5b2afdca5d4f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f81a8e4317aa956",
            "owner_id": "258049740213",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "my-vpc-2",
              "Owner": "Macarious"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "my-vpc-2",
              "Owner": "Macarious"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}